# azul-voos

./: .gitignore  README.md  html_handling.py  main.py  pyproject.toml
src/azul_voos/: azul.py  dates.py  html_scraper.py  util.py
