[build-system]
requires = ["hatchling", "selenium", "bs4", "requests", "wget"]
build-backend = "hatchling.build"

[project]
name = "azul_voos"
version = "0.0.4"
authors = [
  { name="ricks", email="ricstange@gmail.com" },
]
description = "Scrapping de dados de voo da empresa Azul utilizando selenium"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ricardostange/azul-voos"
"Bug Tracker" = "https://github.com/ricardostange/azul-voos/issues"